# cpp_obj-preview

./: CMakeLists.txt  README.MD  input.mtl  obj-preview.md
include/Cpp_obj-preview/: processing.h
include/cpp_obj-preview/: processing.h
shaders/: shader.frag
src/: main.cpp  processing.cpp
